--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
                     <img src="books.png" alt="incelemelere götüren görsel ">
                 </button>
             </div>
+            <div class="shelf">
+                <button class="shelf-button" onclick="show_opinions()">
+                    <div class="label">ANKETİMİZ</div>
+                    <img src="books.png" alt="incelemelere götüren görsel ">
+                </button>
+            </div>
+            <div class="shelf">
+                <button class="shelf-button" onclick="show_opinions()">
+                    <div class="label">BİZE ULAŞIN</div>
+                    <img src="books.png" alt="incelemelere götüren görsel ">
+                </button>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
