--- a/index.html
+++ b/index.html
@@ -64,22 +64,24 @@
     <div class="center">
         <div class="shelves">
             <div class="shelf">
-                <a class="shelf-button" href="hakkında.html">
-                    <div class="label">BİZ KİMİZ?</div>
-                    <img src="books.png" alt="hakkında sayfasına götüren görsel">
-                </a> 
+                <div class="book-label">BİZ KİMİZ?</div>
+                <a class="shelf-button" href="hakkında.html"><div class="shelf-a"></div></a> 
             </div>
             <div class="shelf">
-                <button class="shelf-button" onclick="show_stories()">
-                    <div class="label">HİKAYELER</div>
-                    <img src="books.png" alt="hikayelere götüren görsel">
-                </button>
+                <div class="book-label">HİKAYELER</div>
+                <button class="shelf-button" onclick="show_stories()"></button>
             </div>
             <div class="shelf">
-                <button class="shelf-button" onclick="show_opinions()">
-                    <div class="label">İNCELEMELER</div>
-                    <img src="books.png" alt="incelemelere götüren görsel ">
-                </button>
+                <div class="book-label">İNCELEMER</div>
+                <button class="shelf-button" onclick="show_opinions()"></button>
+            </div>
+            <div class="shelf">
+                <div style="font-size: 4vw;" class="book-label">HANGİ DEDE KORKUT KARAKTERİSİN?</div>
+                <a class="shelf-button" href="anket.html"><div class="shelf-a"></div></a> 
+            </div>
+            <div class="shelf">
+                <div class="book-label">BİZE ULAŞIN</div>
+                <a class="shelf-button" href="iletisim.html"><div class="shelf-a"></div></a> 
             </div>
         </div>
     </div>
