--- a/test.html
+++ b/test.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  rgb(92, 52, 28);
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1700 657">
         <image width="1700" height="657" xlink:href="inceleme-kitaplar.png"></image> 
         <a xlink:href="yazilar/incelemeler/ozankavrami.html">
