--- a/yazilar/hikayeler/hikaye12.html
+++ b/yazilar/hikayeler/hikaye12.html
@@ -13,4 +13,4 @@
         <a href="/index.html" class="mainpage-btn" >
             ana sayfaya dön
         </a> 
-        <h3 style="text-align: center;">DİRSE HAN OĞLU BOĞAÇ HAN DESTANINI BEYAN EDER HANIM HEY</h3>
+        <h3 style="text-align: center;">SALUR KAZAN'IN YEDİ BAŞLI EJDERHAYI ÖLDÜRMESİ DESTANI</h3>
