--- a/yazilar/hikayeler/hikaye3.html
+++ b/yazilar/hikayeler/hikaye3.html
@@ -9,11 +9,11 @@
 <body class="center">
     
     <div class="text-container">
-        <h1 class="title"></h1>
+        <h1 class="title"  style="text-align: center;">KAZAN BEY OĞLU URUZ'UN ESİR OLDUĞU DESTAN</h1>
         <a href="/index.html" class="mainpage-btn" >
             ana sayfaya dön
         </a> 
-        <h3 style="text-align: center;">DİRSE HAN OĞLU BOĞAÇ HAN DESTANINI BEYAN EDER HANIM HEY</h3>
+       
         <p style="text-align: center;">Ula&#351; o&#287;lu Salur Kazan, g&uuml;nlerden birg&uuml;n doksan ba&#351;l&#305;<br>
             bir ota&#287; diktirmi&#351;. Binbir yere ipek hal&#305; d&ouml;&#351;etmi&#351;. Ala<br>
             savanlarla g&ouml;lgelikler &ccedil;ektirmi&#351;. Attan ayg&#305;r, deveden bu&#287;ra,<br>
