--- a/yazilar/hikayeler/hikaye5.html
+++ b/yazilar/hikayeler/hikaye5.html
@@ -9,11 +9,11 @@
 <body class="center">
     
     <div class="text-container">
-        <h1 class="title"></h1>
+        <h1 class="title"  style="text-align: center;">KANGLI KOCA OĞLU KAN TURALI DESTANI</h1>
         <a href="/index.html" class="mainpage-btn" >
             ana sayfaya dön
         </a> 
-        <h3 style="text-align: center;">DİRSE HAN OĞLU BOĞAÇ HAN DESTANINI BEYAN EDER HANIM HEY</h3>
+        
         <p style="text-align: center;">O&#287;uz &uuml;lkesinde Kangl&#305; Koca ad&#305;nda g&uuml;rb&uuml;z bir adam<br>
             varm&#305;&#351;. Kangl&#305; Koca&rsquo;n&#305;n kendisi gibi g&uuml;rb&uuml;z bir de yeti&#351;kin<br>
             o&#287;lu varm&#305;&#351;. Ad&#305;na da Kan Tural&#305; derlermi&#351;. Kan Tural&#305;,<br>
