--- a/yazilar/hikayeler/hikaye7.html
+++ b/yazilar/hikayeler/hikaye7.html
@@ -9,11 +9,11 @@
 <body class="center">
     
     <div class="text-container">
-        <h1 class="title"></h1>
+        <h1 class="title"  style="text-align: center;">BASAT'IN TEPEGÖZ'Ü ÖLDÜRDÜĞÜ DESTAN</h1>
         <a href="/index.html" class="mainpage-btn" >
             ana sayfaya dön
         </a> 
-        <h3 style="text-align: center;">DİRSE HAN OĞLU BOĞAÇ HAN DESTANINI BEYAN EDER HANIM HEY</h3>
+        
         <p style="text-align: center;">
             D&#305;&#351; O&#287;uzlar&#305;n Aruz Koca ad&#305;nda bir beyi varm&#305;&#351;. Aruz<br>
             Koca&rsquo;n&#305;n, arslan par&ccedil;as&#305; iki de o&#287;lu varm&#305;&#351;. B&uuml;y&uuml;&#287;&uuml;ne<br>
