--- a/yazilar/hikayeler/hikaye9.html
+++ b/yazilar/hikayeler/hikaye9.html
@@ -9,11 +9,11 @@
 <body class="center">
     
     <div class="text-container">
-        <h1 class="title"></h1>
+        <h1 class="title"  style="text-align: center;">UŞUN KOCA OĞLU SEGREK DESTANI</h1>
         <a href="/index.html" class="mainpage-btn" >
             ana sayfaya dön
         </a> 
-        <h3 style="text-align: center;">DİRSE HAN OĞLU BOĞAÇ HAN DESTANINI BEYAN EDER HANIM HEY</h3>
+        
         <p style="text-align: center;">
             O&#287;uz &uuml;lkesinde U&#351;un Koca ad&#305;nda bir yi&#287;it varm&#305;&#351;. U&#351;un<br>
             Koca&rsquo;n&#305;n ahir &ouml;mr&uuml;nde iki de o&#287;lu varm&#305;&#351;. K&uuml;&ccedil;&uuml;&#287;&uuml;<br>
