--- a/yazilar/hikayeler/hikaye1.html
+++ b/yazilar/hikayeler/hikaye1.html
@@ -9,11 +9,11 @@
 <body class="center">
     
     <div class="text-container">
-        <h1 class="title"></h1>
+        <h1 class="title"  style="text-align: center;">>SALUR KAZAN'IN EVİ YAĞMALANMASI DESTANI</h1>
         <a href="/index.html" class="mainpage-btn" >
             ana sayfaya dön
         </a> 
-        <h3 style="text-align: center;">DİRSE HAN OĞLU BOĞAÇ HAN DESTANINI BEYAN EDER HANIM HEY</h3>
+        
         <p style="text-align: center;">Beylerbeyi Salur Kazan, g&uuml;nlerden bir g&uuml;n doksan ba&#351;l&#305;<br>
             bir ota&#287; diktirmi&#351;. &#304;&ccedil;lerini ipek hal&#305;larla d&ouml;&#351;etmi&#351;.<br>
             Attan ayg&#305;r, deveden bu&#287;ra, koyundan ko&ccedil; kestirmi&#351;. Erkek<br>
