--- a/yazilar/hikayeler/hikaye10.html
+++ b/yazilar/hikayeler/hikaye10.html
@@ -9,11 +9,11 @@
 <body class="center">
     
     <div class="text-container">
-        <h1 class="title"></h1>
+        <h1 class="title"  style="text-align: center;">SALUR KAZANIN ESİR OLUP OĞLU URUZ'UN ÇIKARDIĞI DESTAN</h1>
         <a href="/index.html" class="mainpage-btn" >
             ana sayfaya dön
         </a> 
-        <h3 style="text-align: center;">DİRSE HAN OĞLU BOĞAÇ HAN DESTANINI BEYAN EDER HANIM HEY</h3>
+        
         <p style="text-align: center;">Bir g&uuml;n Trabzon Tekfuru, Beylerbeyi Salur Kazan&rsquo;a bir<br>
             &#351;ahin g&ouml;ndermi&#351;. Kazan Bey, bir sabah &#351;ahinci ba&#351;&#305;n&#305;,<br>
             tavlac&#305; ba&#351;&#305;n&#305;, hizmetk&acirc;r&#305;n&#305; alm&#305;&#351;. Beylere pa&#351;alara duyurmadan<br>
