--- a/yazilar/hikayeler/hikaye11.html
+++ b/yazilar/hikayeler/hikaye11.html
@@ -9,11 +9,11 @@
 <body class="center">
     
     <div class="text-container">
-        <h1 class="title"></h1>
+        <h1 class="title"  style="text-align: center;">İÇ OĞUZ'A TAŞ OĞUZ ASİ OLUP BEYREK ÖLDÜĞÜ DESTAN</h1>
         <a href="/index.html" class="mainpage-btn" >
             ana sayfaya dön
         </a> 
-        <h3 style="text-align: center;">DİRSE HAN OĞLU BOĞAÇ HAN DESTANINI BEYAN EDER HANIM HEY</h3>
+       
         <p style="text-align: center;">&#304;&ccedil; O&#287;uzlar&#305;n Salur Kazan ad&#305;nda bir beyi varm&#305;&#351;. Kazan<br>
             Bey, zenginli&#287;i ve c&ouml;mertli&#287;i ile me&#351;hur biriymi&#351;. Y&#305;lda<br>
             bir kere D&#305;&#351; O&#287;uzlar&#305;, &#304;&ccedil; O&#287;uzlar&#305; bir araya getirir, evini ya&#287;malat&#305;rm&#305;&#351;.<br>
