--- a/yazilar/hikayeler/hikaye4.html
+++ b/yazilar/hikayeler/hikaye4.html
@@ -9,11 +9,11 @@
 <body class="center">
     
     <div class="text-container">
-        <h1 class="title"></h1>
+        <h1 class="title"  style="text-align: center;">DUHA KOCA OĞLÜ DELİ DUMRUL DESTANI</h1>
         <a href="/index.html" class="mainpage-btn" >
             ana sayfaya dön
         </a> 
-        <h3 style="text-align: center;">DİRSE HAN OĞLU BOĞAÇ HAN DESTANINI BEYAN EDER HANIM HEY</h3>
+       
         <p style="text-align: center;">O&#287;uz &uuml;lkesinde Deli Dumrul ad&#305;nda kuvvetli bir yi&#287;it<br>
             varm&#305;&#351;. Yaln&#305;z kuvvetini i&#351;te g&uuml;&ccedil;te de&#287;il de gider, nerede<br>
             bir adam g&ouml;rse onda s&#305;narm&#305;&#351;. Ba&#351;l&#305;ya ba&#351; e&#287;dirmedik&ccedil;e,<br>
