--- a/yazilar/hikayeler/hikaye6.html
+++ b/yazilar/hikayeler/hikaye6.html
@@ -9,11 +9,11 @@
 <body class="center">
     
     <div class="text-container">
-        <h1 class="title"></h1>
+        <h1 class="title"  style="text-align: center;">KAZILIK KOCA OĞLU YİGENEK DESTANI</h1>
         <a href="/index.html" class="mainpage-btn" >
             ana sayfaya dön
         </a> 
-        <h3 style="text-align: center;">DİRSE HAN OĞLU BOĞAÇ HAN DESTANINI BEYAN EDER HANIM HEY</h3>
+       
         <p style="text-align: center;">O&#287;uz han&#305; Bay&#305;nd&#305;r Han&rsquo;&#305;n Kaz&#305;l&#305;k Koca ad&#305;nda bir veziri<br>
             varm&#305;&#351;. Kaz&#305;l&#305;k Koca ak&#305;ll&#305;, faziletli, cesur bir vezirmi&#351;.<br>
             Akl&#305;, fikri sayesinde her i&#351;in &uuml;stesinden gelirmi&#351;. O&#287;uzlar&#305;n<br>
