--- a/yazilar/hikayeler/hikaye8.html
+++ b/yazilar/hikayeler/hikaye8.html
@@ -9,11 +9,11 @@
 <body class="center">
     
     <div class="text-container">
-        <h1 class="title"></h1>
+        <h1 class="title"  style="text-align: center;">>BEGİL OĞLU EMREN DESTANI</h1>
         <a href="/index.html" class="mainpage-btn" >
             ana sayfaya dön
         </a> 
-        <h3 style="text-align: center;">DİRSE HAN OĞLU BOĞAÇ HAN DESTANINI BEYAN EDER HANIM HEY</h3>
+        
         <p style="text-align: center;">Kam Gan o&#287;lu Bay&#305;nd&#305;r Han, g&uuml;nlerden bir g&uuml;n hanl&#305;k<br>
             ota&#287;&#305;n&#305; kurdurmu&#351;. Ala savanlarla g&ouml;ky&uuml;z&uuml;ne g&ouml;lgelikler<br>
             &ccedil;ektirmi&#351;. Bin yere ipek hal&#305;lar d&ouml;&#351;etmi&#351;. &#304;&ccedil; O&#287;uz, D&#305;&#351;<br>
