--- a/yazilar/hikayeler/hikaye0.html
+++ b/yazilar/hikayeler/hikaye0.html
@@ -9,7 +9,7 @@
 <body class="center">
     
     <div class="text-container">
-        <h1 class="title"  style="text-align: center;">DİRSE HAN OĞLU BOĞAÇ HAN DESTANI </h1>
+        <h1 class="title">DİRSE HAN OĞLU BOĞAÇ HAN DESTANI </h1>
         <a href="/index.html" class="mainpage-btn" >
             ana sayfaya dön
         </a> 
