--- a/yazilar/hikayeler/hikaye1.html
+++ b/yazilar/hikayeler/hikaye1.html
@@ -9,7 +9,7 @@
 <body class="center">
     
     <div class="text-container">
-        <h1 class="title"  style="text-align: center;">>SALUR KAZAN'IN EVİ YAĞMALANMASI DESTANI</h1>
+        <h1 class="title">>SALUR KAZAN'IN EVİ YAĞMALANMASI DESTANI</h1>
         <a href="/index.html" class="mainpage-btn" >
             ana sayfaya dön
         </a> 
