--- a/yazilar/hikayeler/hikaye2.html
+++ b/yazilar/hikayeler/hikaye2.html
@@ -9,12 +9,12 @@
 <body class="center">
     
     <div class="text-container">
-        <h1 class="title">KAM BÜRE BEY OĞLU BAMSI BEYREK DESTANI</h1>
+         <h1 class="title"  style="text-align: center;">KAM BÜRE BEY OĞLU BAMSI BEYREK DESTANI</h1>
         <a href="/index.html" class="mainpage-btn" >
             ana sayfaya dön
         </a> 
        
-        <p style="text-align: center;">&#304;&ccedil; O&#287;uzlarda Bay B&uuml;re ad&#305;nda bir bey varm&#305;&#351;. Bay<br>
+        <p>&#304;&ccedil; O&#287;uzlarda Bay B&uuml;re ad&#305;nda bir bey varm&#305;&#351;. Bay<br>
             B&uuml;re&rsquo;nin d&uuml;nya mal&#305;ndan yana nasibi pek a&ccedil;&#305;km&#305;&#351;. Kap&#305;s&#305;nda<br>
             tavla tavla atlar&#305;, katar katar develeri, k&#305;rk &ccedil;obanl&#305; s&uuml;r&uuml;leri<br>
             varm&#305;&#351;. Alt&#305;n&#305;n g&uuml;m&uuml;&#351;&uuml;n hesab&#305;n&#305; ise var&#305;n siz g&ouml;r&uuml;n.<br>
