--- a/hakkında.html
+++ b/hakkında.html
@@ -13,7 +13,7 @@
             ana sayfaya dön
         </a> 
         <p style="font-size: large;">
-            Lise Öğrencileri Gamze ÇELİK, Nehir TORAMAN ve Murathan AYANOĞLU, “Dede Korkut Kütüphanesi” adlı bir web sitesi oluşturmaya karar verdik. Kültürümüzün en önemli miraslarından olan bu kaynağın bilinmesi, irdelenmesi ve tanıtılması açısından çıktığımız bu yolda ilk durağımız Dede Korkut Hikayeleri oldu. <br>
+            Gamze ÇELİK, Nehir TORAMAN ve Murathan AYANOĞLU, “Dede Korkut Kütüphanesi” adlı bir web sitesi oluşturmaya karar verdik. Kültürümüzün en önemli miraslarından olan bu kaynağın bilinmesi, irdelenmesi ve tanıtılması açısından çıktığımız bu yolda ilk durağımız Dede Korkut Hikayeleri oldu. <br>
 
             İnternet kaynaklarından Dede Korkut Hikayeleri hakkında bilgi almak isteyen ortaokul ve lise öğrencileri için erişilebilir, anlaşılabilir, kullanışlı ve güncellenebilir bir web sitesi kurmayı amaçlıyoruz. Bu başlık altında bilgi sahibi olmak isteyen kimselerin erişebileceği, kullanımı ve dili yaş grubumuza hitap eden keyifli bir kaynak. Günümüzde Dede Korkut hakkında bilgilere erişim sunan en yetkin kaynaklar akademik makalelerdir. Nihai olarak bu kaynakların kullanımı yaşıtlarımız için zordur ve anlaşılması güçtür. Bu makaleler, bizlerin de yararlanarak hazırladığı web sitemizde sadeleştirilmiş ve seviyesine göre kişilerin faydalanabileceği konuma getirilmiştir. Amacımız yaşıtlarımızın bu bilgileri en verimli şekilde okuyabileceği, öğrenebileceği ve yayabileceği bir internet kaynağı oluşturmaktır.
             Biz yolumuza artarak ve gelişerek devam edeceğiz. Zamanla yeni eserlerle ve uygulamalarla karşınıza geleceğiz.  <br>
