--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <button class="shelf-button" onclick="show_stories()"></button>
             </div>
             <div class="shelf">
-                <div class="book-label">İNCELEMER</div>
+                <div class="book-label">İNCELEMELER</div>
                 <button class="shelf-button" onclick="show_opinions()"></button>
             </div>
             <!--
