--- a/yazilar/incelemeler/karakterler.html
+++ b/yazilar/incelemeler/karakterler.html
@@ -13,17 +13,18 @@
         <a href="/index.html" class="mainpage-btn" >
             ana sayfaya dön
         </a>
-        <h3>Dirse Han:</h3> <p> Oğlundan önceki dönemlerde oldukça güçlüdür, yöneticidir. Bu ikilinin arasındaki eskiyi temsil eder.
-        </p> <br>
+        
 
 
         <h3>(Dirse Han oğlu) Boğaç Han:</h3> <p> Fiziksel gücü ile tanınır. İsmini aldığı boğayı yenme olayı, o dönemce yenilmez, kimi destanlarca tanrısal görülen bir gücü alt etmesiyle bu fikri desteklemekte. Hem kendi içinde, hem topluma kazandırdığı gelişme ve büyüme ile yeniyi temsil eder.
         </p> <br>
 
 
-        <h3>Salur Kazan / Kazan Bey:</h3> <p> Güvence ve devamlılık kavramlarınca tanınmışlığı vardır. Toplum ona güvenmektedir. Hikâye süresince şanını, varlığı kaybetme tehlikesine düşer; bu tehlikeye karşı hem geçmişi hem geleceğini düşünerek karar vererek kurtulması, sorun çözme ve ileri görüşlülük konularında usta olduğu gösterir. Yedi Başlı Ejderha’ya karşı kazandığı zafer ile kahramanlığını tekrar kanıtlamış, kaos ile ilişkilendirilen yaratığı alt ederek boyda tekrar huzuru ve güvenliği sağlamıştır. Özellikle on ikinci hikâyede affediciliği göz önüne çıkmakta. Hanlar hanları Bayındır Han’dan sonra en kudretli bey olarak tasvir edilir. 
+        <h3>Salur Kazan / Kazan Bey:</h3> <p> Oğuzların saygın bir beyidir. Hem İç Oğuzlar’ın, hem de Dış Oğuzlar’ın beyidir. İsmi yalnızca Dede Korkut’ta değil, Divanü Lugati’t Türk’te de geçmektedir. Barışçıl, yiğit bir kişidir ve öne çıkan özelliklerinden biri de kadına verdiği önemdir. Güvence ve devamlılık kavramlarınca tanınmışlığı vardır. Toplum ona güvenmektedir. Hikâye süresince şanını, varlığı kaybetme tehlikesine düşer; bu tehlikeye karşı hem geçmişi hem geleceğini düşünerek karar vererek kurtulması, sorun çözme ve ileri görüşlülük konularında usta olduğu gösterir. Yedi Başlı Ejderha’ya karşı kazandığı zafer ile kahramanlığını tekrar kanıtlamış, kaos ile ilişkilendirilen yaratığı alt ederek boyda tekrar huzuru ve güvenliği sağlamıştır. Özellikle on ikinci hikâyede affediciliği göz önüne çıkmakta. Hanlar hanları Bayındır Han’dan sonra en kudretli bey olarak tasvir edilir.
         </p> <br>
 
+        <h3>Dirse Han:</h3> <p> Oğlundan önceki dönemlerde oldukça güçlüdür, yöneticidir. Bu ikilinin arasındaki eskiyi temsil eder.
+        </p> <br>
 
         <h3>Şökli Melik:</h3> <p> Oğuz boylarının en büyük düşmanıdır. Düşmanların ortak özelliklerinde geçtiği üzere: Oğuzlara casuslar gönderir, ava gitmelerini, obadan ayrılmalarını bekler ve zayıf zamanlarda obaya baskın yapar, yakar yıkar. Beyin ailesinden birini rehin alır.
         </p> <br>
@@ -31,7 +32,7 @@
         <h3>Bamsi Beyrek:</h3> <p>  Bahsi geçen karakterler gibi, fiziksel olarak güçlüdür. Yaptığı kahramanlıkları önce isimsiz olarak, herhangi biri olarak yapan ve bir ad kazanan karakterdir. Bireyselleşmeyi temsil eder. Toplumdaki görev bilincinin iyi bir örneğidir. Yaşadığı tutsaklık dönemi, karakterinin gelişmesine fayda sağlamıştır. Yenilik ve bireysellik karakterin yapı taşlarıdır.
         </p> <br>
 
-        <h3>(Salur Kazan oğlu) Uruz Bey:</h3> <p>Babasınca eğitilmek istenerek bir savaş meydanına götürülmesi ve neredeyse mağlubiyete uğrayan babasını kurtarması ile bilinir. Oğuzların yardımı ile babasının imdadına yetişmiş ve kahraman ünvanlarını kazanmıştır.
+        <h3>(Salur Kazan oğlu) Uruz Bey:</h3> <p>Babasının kendisine henüz güvenmemesi üzerine katılmasını istemediği bir savaşta, zor duruma düşen babasının imdadına koşmuş ve onu kurtarak büyük bir yiğitlik sergilemiştir. Babasınca eğitilmek istenerek bir savaş meydanına götürülmesi ve neredeyse mağlubiyete uğrayan babasını kurtarması ile bilinir. Oğuzların yardımı ile babasının imdadına yetişmiş ve kahraman ünvanlarını kazanmıştır.
         </p> <br>
 
         <h3>Deli Dumrul:</h3> <p>Ölümü, Azrail’i tanımamazlık ederek bize Gılgamış’ı anımsatan bir karaktere sahiptir. Bir köprü üzerinde durup haraç kesmesi ile bilinir. Azraile kafa tutmakta, yaptığı davranışlara sonuç olarak ona bir can borçlu olması sonucunda eşinin sergilediği fedakar tutum ile boylarda eş kavramının ne kadar sadık ve bağlılık sahibi olduğunu görebiliriz. Hikâyesi boyunca insanoğlunun ölüme çare arayaşının sembolizmini görebiliriz.</p> <br>
@@ -48,10 +49,6 @@
 
         <h3>Bayındır Han:</h3> <p>Hanlar hanı olarak da tanınır. Beylerin en güçlüsüdür. Savaşları ilan eden ve başlatan, topluma önderlik eden birinci kişidir. Kuralcılığı ile öne çıkar.
         </p> <br>
-
-        <h3>Uruz Bey:</h3> <p>Babasının kendisine henüz güvenmemesi üzerine katılmasını istemediği bir savaşta, zor duruma düşen babasının imdadına koşmuş ve onu kurtarak büyük bir yiğitlik sergilemiştir.</p> <br>
-
-        <h3>Salur Kazan:</h3> <p>Oğuzların saygın bir beyidir. Hem İç Oğuzlar’ın, hem de Dış Oğuzlar’ın beyidir. İsmi yalnızca Dede Korkut’ta değil, Divanü Lugati’t Türk’te de geçmektedir. Barışçıl, yiğit bir kişidir ve öne çıkan özelliklerinden biri de kadına verdiği önemdir.</p> <br>
 
         <h3>Anne:</h3> <p>Bağışlayıcı ve güçlendiricidir. Her ne kadar toplulukta eril rol kadar etkisi gözlenmese de, bu kişilerin olduğu konuma gelmelerinde, önemli seçimlerinde ve geri düştüklerinde yardımcıları olmuşlardır. Karakterce silik oldukları söylenemez ancak bireyden bireye çok değişen özellikleri yoktur, grup olarak incelenebilir.
         </p> <br>
